--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,18 @@
   <artifactId>xinghe-spring</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <modules>
     <module>xinghe-spring-ioc</module>
   </modules>
@@ -21,7 +33,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>5.3.10</version>
+      <version>5.3.11</version>
     </dependency>
 
     <dependency>
@@ -34,13 +46,13 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.1</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>5.2.12.RELEASE</version>
+      <version>5.3.11</version>
     </dependency>
     
   </dependencies>
